@@ -1,1 +1,9 @@
 PROJECTNAME = "reflex"
+
+try:
+    import Products.CacheSetup.vocabulary
+except ImportError:
+    HAS_CACHESETUP = False
+else:
+    HAS_CACHESETUP = True
+
