@@ -17,6 +17,7 @@ from Products.Reflecto.interfaces import IReflector
 from Products.Reflecto.interfaces import ILifeProxy
 from Products.Reflecto.utils import makePathAbsolute
 from Products.Reflecto.fields import InterfaceField
+from Products.Reflecto.config import HAS_CACHESETUP
 
 from Products.CMFDynamicViewFTI.browserdefault import BrowserDefaultMixin
 
@@ -29,11 +30,14 @@ ReflectoSchema = BaseSchema + Schema((
         default = False,
         interface = ILifeProxy,
         widget = BooleanWidget(
-            label = "Show life data",
+            label = "Show live data",
             label_msgid = "life_label",
-            description = "If this flag is set the life contents of the "
+            description = "If this flag is set the live contents of the "
                           "filesystem will be shown. This makes Reflecto "
-                          "a lot slower and prevents indexing of files.",
+                          "a lot slower and prevents indexing of files. "
+                          "Please note that due to browser caching and "
+                          "proxy servers users may still see cached older "
+                          "data.",
             description_msgid = "life_help",
             i18n_domain = "plone"),
         ),
@@ -54,6 +58,32 @@ ReflectoSchema = BaseSchema + Schema((
         ),
     ))
 
+if HAS_CACHESETUP:
+    from Products.Archetypes.atapi import DisplayList
+    from Products.Archetypes.atapi import SelectionWidget
+    from Products.CMFCore.utils import getToolByName
+    from Products.CacheSetup.config import CACHE_TOOL_ID
+    from Products.CacheSetup.content.content_cache_rule import ContentCacheRule
+
+    ReflectoSchema += Schema((
+        StringField("cacheRule",
+            write_permission = AddReflectorFolder,
+            default = "",
+            required = True,
+            vocabulary = "listReflectoCacheRules",
+            widget = SelectionWidget(
+                label       = "Cache rules",
+                label_msgid = "reflex_cache_label",
+                description = "This setting determines how files downloaded "
+                              "from Reflecto will be cached. You can manage "
+                              "the available cache rules through the cache "
+                              "configuration tool in the Plone site setup. "
+                              "This setting will only take effect if caching "
+                              "is enabled in the cache configuration tool.",
+                description_msgid = "reflex_cache_help",
+                i18n_domain = "Plone"),
+            ),
+    ))
 
 class Reflector(ReflectoDirectoryBase, BaseContent, BrowserDefaultMixin):
     """Reflection of a filesystem folder."""
@@ -68,6 +98,23 @@ class Reflector(ReflectoDirectoryBase, BaseContent, BrowserDefaultMixin):
     _at_rename_after_creation = True
 
     
+    security.declareProtected(View, "listReflectoCacheRules")
+    def listReflectoCacheRules(self):
+        if not HAS_CACHESETUP:
+            return []
+
+        pcs=getToolByName(self, CACHE_TOOL_ID, None)
+        rules=[(rule.getId(), rule.Title())
+                for rule in pcs.getRules().objectValues("ContentCacheRule")
+                    if "ReflectoFile" in rule.getContentTypes()]
+        rules.sort(key=lambda x: x[1])
+
+        vocab=DisplayList()
+        vocab.add("", "Default browser caching")
+        vocab+=DisplayList(rules)
+
+        return vocab
+
     security.declareProtected(View, "getReflector")
     def getReflector(self):
         return self
@@ -76,7 +123,7 @@ class Reflector(ReflectoDirectoryBase, BaseContent, BrowserDefaultMixin):
     def getFilesystemPath(self):
         return makePathAbsolute(self.getRelativePath())
 
-    security.declarePrivate('getPathToReflectoParent')
+    security.declarePrivate("getPathToReflectoParent")
     def getPathToReflectoParent(self):
         return ()
     
